# python-gllib

./: README.md  __init__.py  contextmanager.py  framebuffer.py  fsquad.py  gl.py  matrix.py  sdl_runner.py  setup.cfg  shader.py  texture.py  uniform.py  util.py  vao.py  vbo.py  vector.py
examples/: gllib  program_example.py  triangle.py
gllib/: __init__.py  attribute.py  fsquad.py  matrix.py  program.py  scene.py  sdl_runner.py  shader.py  texture.py
gllib/util/: __init__.py  dtype.py
test/: test_contextmanager.py
