[metadata]
name = gllib
version = attr: gllib.__version__
url = https://github.com/aib/python-gllib
author = aib
author_email = aibok42@gmail.com
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
description = Wrapper over (Py)OpenGL and other 3D/graphics programming constructs
long_description = file: README.md
long_description_content_type = text/markdown
keywords = opengl, 3d, graphics, utility

[options]
packages =
    gllib
python_requires = >=3.0
